--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -4,6 +4,7 @@
     "syncStatus": {
       "synchronized": "Synchronized",
       "syncing": "Synchronizing",
+      "waitingForSyncStatus": "Waiting for sync status…",
       "downloading": "Downloading update",
       "synced": "Synced",
       "justNow": "Synchronized just now",
@@ -16,7 +17,7 @@
       "popular": "Popular",
       "tokens": "Tokens",
       "balance": "Balance",
-      "max": "MAX",
+      "max": "Max",
       "inputLabel": "0"
     }
   },
@@ -24,7 +25,7 @@
     "sideBar": {
       "balance": "Balance",
       "dfi": "DFI",
-      "wallet": "Wallet",
+      "wallets": "Wallets",
       "dex": "DEX",
       "masterNodes": "Masternodes",
       "blockchain": "Blockchain",
@@ -54,7 +55,7 @@
       },
       "blockPage": {
         "block": "Block",
-        "title": "– DeFi Blockchain Client",
+        "title": "– DeFi app",
         "blockchain": "Blockchain",
         "transactions": "Transactions",
         "noOfTransactions": "Number of transactions",
@@ -79,7 +80,7 @@
       },
       "minerPage": {
         "miner": "Miner",
-        "defiBlockChainClient": "DeFi Blockchain Client",
+        "defiApp": "DeFi app",
         "blockchain": "Blockchain"
       }
     },
@@ -93,24 +94,18 @@
       "title": "Exchange – DeFi app",
       "exchange": "Exchange",
       "section": "Section",
-      "footerBar": "Footer Bar"
+      "footerBar": "Footer bar"
     },
     "helpPage": {
       "title": "Help – DeFi app",
       "help": "Help",
       "helpPageHeader": "Connect with the community with these options:",
       "telegramEn": "Telegram community (EN)",
-      "telegramEnLink": "t.me/defiblockchain",
       "telegramDe": "Telegram community (DE)",
-      "telegramDeLink": "t.me/defiblockchain_DE",
-      "github": "Report an Issue",
-      "githubLink": "github.com",
+      "github": "Report an issue",
       "faq": "Frequently-Asked Questions",
-      "faqLink": "defichain.com/learn/#faq",
       "defichainsite": "Official website",
-      "defichainsiteLink": "defichain.com",
       "reddit": "Reddit community",
-      "redditLink": "reddit.com/r/defiblockchain",
       "helpTextFooterLine1": "DeFiChain is a community-driven and open project.",
       "helpTextFooterLine2": "The DeFiChain Foundation does not provide direct support.",
       "section": "Section"
@@ -152,14 +147,14 @@
         "createNodeButton": "Create masternode",
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
-        "masternodeOperator": "Masternode Operator",
+        "masternodeOperator": "Masternode operator",
         "masternodeOwner": "Masternode owner",
         "backToMasternodePage": "Close",
         "restartNodeButton": "Restart node",
         "masterNodeSuccess": "You can manually set masternode config in defi.conf or you can automatic set this masternode config by restarting the node.",
-        "collaterAddress": "Collateral Address",
-        "masternodeOperatorNotOptional": "Operator Address",
-        "masternodeOperatorOptional": "Operator Address (Optional)",
+        "collaterAddress": "Collateral address",
+        "masternodeOperatorNotOptional": "Operator address",
+        "masternodeOperatorOptional": "Operator address (optional)",
         "noticeMasternodeOperator": "If masternode operator is different from owner",
         "noticeMasternodeOwner": "Owner address where collateral funds will be drawned from"
       },
@@ -175,14 +170,14 @@
         "mintedBlocks": "Minted blocks",
         "resignHeight": "Resign height",
         "resignTx": "Resign Tx",
-        "banHeight": "Ban Height",
+        "banHeight": "Ban height",
         "banTx": "Ban Tx",
         "resignMasterNode": "Resign",
         "confirmation": "Are you sure you want to resign a masternode?",
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
         "successText": "Success",
-        "backToMasternodePage": "Back to Masternode Page"
+        "backToMasternodePage": "Back to masternode"
       },
       "masternodeTab": { "myMasternodes": "Mine", "network": "Network" }
     },
@@ -230,7 +225,7 @@
         "createTitle": "Create token",
         "updateTitle": "Update DCT (DeFi Custom Token)",
         "name": "Name of token",
-        "symbol": "Ticker Symbol",
+        "symbol": "Ticker symbol",
         "decimal": "Decimal",
         "decimalText": "Number of decimal places. Cannot be changed once set.",
         "limit": "Limit",
@@ -240,7 +235,7 @@
         "optionalFinalSupplyLimitText": "Immutable total supply limit. Leave blank for unlimited supply. Cannot be changed once set.",
         "tradeable": "Trade-able?",
         "dfiRequired": "DFI required",
-        "collateralAddress": "Collateral Address",
+        "collateralAddress": "Collateral address",
         "collateralAddressError": "Minimum 100 DFI is required",
         "createTokenButton": "Create token",
         "createConfirmationText": "Are you sure you want to create a token?",
@@ -248,8 +243,8 @@
         "createTokenSuccess": "Token was created successfully",
         "updateTokenSuccess": "Token was updated successfully",
         "tokenHash": "Token Hash",
-        "backToTokenPage": "Back To token",
-        "updateTokenButton": "UPDATE TOKEN"
+        "backToTokenPage": "Back to token",
+        "updateTokenButton": "Update token"
       },
       "tokenInfo": {
         "back": "Back",
@@ -277,7 +272,7 @@
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
         "successText": "Success",
-        "backToTokenPage": "Back to Token Page",
+        "backToTokenPage": "Back to token",
         "confirmation": "Are you sure you want to destroy a token?",
         "deleteToken": "Delete token",
         "editToken": "Edit token",
@@ -291,9 +286,9 @@
         "amount": "Amount",
         "cancel": "Cancel",
         "continue": "continue",
-        "pleaseVerifyAmount": "Please Verify Amount",
-        "completeMint": "Complete Mint",
-        "transactionSuccessMsg": "Transaction successful. Your token balance will update once the transaction has been confirmed by the DeFi Blockchain.",
+        "pleaseVerifyAmount": "Please verify amount",
+        "completeMint": "Complete mint",
+        "transactionSuccessMsg": "Transaction successful. Your token balance will update once the transaction has been confirmed by DeFiChain.",
         "backToToken": "Back to tokens"
       },
       "transfersList": {
@@ -309,15 +304,15 @@
         "cancel": "Cancel",
         "continue": "Continue",
         "dfiRequired": "DFI required",
-        "chooseFile": "CHOOSE FILE",
-        "dctDistribution": "DCT Distribution",
-        "uploadCsv": "UPLOAD CSV",
-        "addAddress": "ADD ADDRESS",
+        "chooseFile": "Choose file",
+        "dctDistribution": "DCT distribution",
+        "uploadCsv": "Upload CSV",
+        "addAddress": "Add address",
         "address": "Address",
         "addAddressesText": "Add addresses to your initial distribution list.",
         "enterDfiAddress": "Enter DFI address",
         "dragAndUploadCSV": "Drag or choose a CSV file to upload.",
-        "verifyingCollateral": "Verifying Collateral"
+        "verifyingCollateral": "Verifying collateral"
       }
     },
     "liquidity": {
@@ -335,7 +330,7 @@
         "liquidityPools": "Liquidity pools",
         "volume": "Volume",
         "apy": "APY",
-        "back": "BACK",
+        "back": "Back",
         "addLiquidity": "Add liquidity",
         "txHash": "Transaction Hash"
       },
@@ -379,8 +374,8 @@
         "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Please verify transaction and press SWAP",
         "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFi blockchain",
-        "transactionComplete": "Transaction Complete",
-        "goToWallet": "Go to Wallet",
+        "transactionComplete": "Transaction complete",
+        "goToWallet": "Go to wallet",
         "go": "Go",
         "ok": "OK",
         "yourLiquidity": "Your liquidity",
@@ -400,8 +395,8 @@
         "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps are fulfilled via automated liquidity pools, not centralized order books.",
         "swaping": "Swapping",
-        "amountInsufficient": "Insufficient amount in your account",
-        "txHash": "Transaction Hash",
+        "amountInsufficient": "Insufficient balance",
+        "txHash": "Transaction hash",
         "somethingWentWrong": "Something went wrong"
       },
       "swapTab": { "from": "From", "to": "To" },
@@ -415,6 +410,7 @@
         "apy": "APY",
         "apyTooltipMessage": "APY indicated here only includes DFI incentives, without commission. Actual APY with commission is thus, more.",
         "totalLiquidity": "Total liquidity (USD)",
+        "addRemoveLiquidity": "Add or remove liquidity",
         "addLiquidity": "ADD LIQUIDITY"
       },
       "addLiquidity": {
@@ -444,15 +440,15 @@
         "viewOnChain": "View on chain",
         "backToPool": "Back to pool",
         "totalPooled": "Total pooled",
-        "amountInsufficient": "Insufficient Amount in your account",
-        "ratioMoreThan1": "Ratio has moved more than 1%. Please check your entry amounts and re-enter",
-        "ratioChanged": "Ratio has been changed. Please check your entry amounts and re-enter"
+        "amountInsufficient": "Insufficient balance",
+        "ratioMoreThan1": "Ratio has moved more than 1%. Please check your amounts and re-enter",
+        "ratioChanged": "Ratio has changed. Please check your amounts and re-enter"
       },
       "removeLiquidity": {
         "address": "Address",
         "label": "Label",
         "selected": "Selected",
-        "removeLiquidity": "Remove Liquidity",
+        "removeLiquidity": "Remove liquidity",
         "enterRemoveLiquidityAmount": "Enter amount of liquidity to remove",
         "verifyTransaction": "Please verify transaction and press CONFIRM",
         "removeLiquidityAmount": "Amount of liquidity to remove",
@@ -469,8 +465,8 @@
         "continue": "Continue",
         "confirm": "Confirm",
         "backToPool": "Back to pool",
-        "refreshingUTXOS": "Refreshing UTXOS",
-        "UTXOSRefreshed": "UTXOS refreshed",
+        "refreshingUTXOS": "Refreshing UTXOs",
+        "UTXOSRefreshed": "UTXOs refreshed",
         "removingLiquidity": "Removing liquidity",
         "liquidityRemoved": "Liquidity removed",
         "transferringTokens": "Transferring tokens",
@@ -536,24 +532,24 @@
         "generateNewSet": "Generate a new set of 24 words",
         "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
         "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
-        "learnMoreAtBitcoinBtn": "LEARN MORE AT BITCOIN WIKI",
+        "learnMoreAtBitcoinBtn": "Learn more at Bitcoin Wiki",
         "copied24Words": "I've have copied down 24 words in the exact order",
         "continue": "Continue",
-        "createNewWallet": "Create New Wallet"
+        "createNewWallet": "Create new wallet"
       },
       "verifyMnemonicPage": {
         "title": "Wallet - Verify mnemonic seed",
-        "back": "BACK",
+        "back": "Back",
         "verifyMnemonicSeed": "Verify mnemonic seed",
         "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please identify which 6 words are in your mnemonic seed.",
         "verifyMnemonicWhichOne": "Which one is…",
         "wordQuestion": "Word %{wordNum}?",
         "creatingYourWallet": "Creating your wallet",
-        "backToWalletPage": "CLOSE",
+        "backToWalletPage": "Close",
         "skipVerificationTextHeader": "Skip at your own risk",
         "skipVerificationText": "Please ensure you have written down your 24-word wallet recovery seed, in the correct order. Without your wallet recovery seed, you will not be able to recover your wallet or restore it again.",
         "showAgain": "Show me my 24 words again",
-        "dontSkip": "Don't skip verification",
+        "dontSkip": "Don’t skip verification",
         "skip": "Skip",
         "continue": "Continue"
       },
@@ -563,8 +559,8 @@
         "restoreWallet": "Restore wallet",
         "restoreWalletGuideLine": "Enter the 24 words in your mnemonic seed to restore wallet.",
         "restoringWallet": "Restoring wallet",
-        "restore": "RESTORE",
-        "backToWalletPage": "CLOSE"
+        "restore": "Restore",
+        "backToWalletPage": "Close"
       },
       "sendPage": {
         "sendTitle": "Send – DeFi app",
@@ -574,7 +570,7 @@
         "send": "Send",
         "amount": "Amount",
         "dFI": "DFI",
-        "max": "MAX",
+        "max": "Max",
         "toAddress": "To address",
         "walletBalance": "Wallet balance",
         "amountToSend": "Amount to send",
@@ -582,13 +578,13 @@
         "continue": "Continue",
         "to": "To",
         "pleaseVerifyAmount": "Please verify the amount and recipient",
-        "completeSend": "Complete Send",
+        "completeSend": "Complete send",
         "sendFailed": "Error occurred while sending amount",
-        "transactionSuccessMsg": "Transaction successful. Your wallet balance will update once the transaction has been confirmed by the DeFi Blockchain.",
+        "transactionSuccessMsg": "Transaction successful. Your wallet balance will update once the transaction has been confirmed by DeFiChain.",
         "backToWallet": "Back to wallet",
-        "dfiAddress": "DFI Address",
+        "dfiAddress": "DFI address",
         "pleaseTransferFunds": "Please transfer some DFIs to your account",
-        "txHash": "Transaction Hash"
+        "txHash": "Transaction hash"
       },
       "receivePage": {
         "receiveDFITitle": "Receive DFI – DeFi app",
@@ -608,7 +604,7 @@
         "addressLabel": "Address label",
         "createNewAddressNotice": "Give your new DFI address a meaningful label",
         "createNewReceiveAddressLabel": "Create new receive address",
-        "backButton": "back",
+        "backButton": "Back",
         "createButton": "Create",
         "legacyAddress": "Legacy address",
         "addressType": "Address type"
@@ -638,6 +634,7 @@
       },
       "walletPage": {
         "tokens": "TOKENS",
+        "walletDeFiApp": "Wallet – DeFi app",
         "walletDefiClient": "Wallet – DeFi app",
         "wallet": "Wallet",
         "delete": "Delete",
@@ -656,17 +653,17 @@
         "blockHeight": "BlockHeight",
         "amount": "Amount"
       },
-      "walletTokensPage": {
-        "walletTokens": "Wallet – Tokens",
-        "tokens": "Tokens",
-        "addToken": "Add Token"
+      "walletWalletsPage": {
+        "walletWallets": "Wallets",
+        "wallets": "Wallets",
+        "addWallet": "Add wallet"
       },
       "walletAddTokensPage": {
         "walletAddTokens": "Wallet – Add token",
         "back": "Back",
         "add": "Add",
         "tokens": "Tokens",
-        "addTokenLabel": "Add a token"
+        "addWalletLabel": "Add a token"
       },
       "walletTxns": {
         "height": "Height",
@@ -679,7 +676,7 @@
     },
     "console": {
       "consolePage": {
-        "consoleDefiClient": "Console – DeFi app",
+        "consoleDeFiApp": "Console – DeFi app",
         "defiCliCommand": "Enter DeFi-cli command",
         "console": "Console",
         "submit": "Submit",
@@ -714,7 +711,7 @@
     "backupSuccess": "Wallet backed up successfully",
     "importSuccess": "Wallet imported successfully",
     "masterNodeOperatorAddressFailure": "Masternode operator address is not present",
-    "restartNode": "Restarting node",
+    "restartNode": "Restarting node. This may take a few minutes.",
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
@@ -726,7 +723,7 @@
     "showUpdateAvailableNotice": "Would you like to update?",
     "yesShowUpdateAvailableButton": "Update",
     "noShowUpdateAvailableButton": "Not now",
-    "startUpdateLabel": "Initiating Update",
+    "startUpdateLabel": "Initiating update",
     "closeBtnLabel": "Close",
     "minimizeBtnLabel": "Minimize",
     "downloadingUpdate": "Downloading update",
@@ -734,7 +731,7 @@
     "restartAppWithReindexNotice": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover. Do you want to restart?",
     "yesRestartAppWithReindex": "Restart app",
     "noCloseApp": "Quit app",
-    "backupWalletNoticeTitle": "Backup Wallet",
+    "backupWalletNoticeTitle": "Backup wallet",
     "backupWalletNotice": "Please backup your wallet before updating your app in order to prevent from any mishap. Do you want to backup your wallet?",
     "backupWalletDatNotice": "Your wallet is not ready yet. Do you want to backup your wallet.dat file?",
     "yesBackupWalletNotice": "Yes",
@@ -744,7 +741,7 @@
     "encryptWalletNoticeTitle": "Lock wallet",
     "encryptWalletNotice": "Enabling wallet locking with a passphrase is recommended for security. Enter the passphrase which you will use to unlock your wallet.",
     "enableLocking": "Enable locking",
-    "later": "LATER",
+    "later": "Later",
     "passphraseLabel": "Enter passphrase",
     "proceed": "Proceed",
     "reset": "Reset",
@@ -767,7 +764,7 @@
     "restartWalletWarningNotice": "You need to restart DeFi app. Do you want to restart?",
     "yesRestartWalletNotice": "Restart now",
     "noRestartWalletNotice": "Later",
-    "resetWalletNoticeTitle": "Reset Wallet",
+    "resetWalletNoticeTitle": "Reset wallet",
     "resetWalletDatNotice": "Are you sure you want to reset?",
     "confirmResetWalletText": "To confirm reset wallet, type '%{text}' in the field.",
     "yeResetpWalletNotice": "Yes",
